--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Generated files
-/physics/target/
+/**/target/
 
 # The library shouldn't decide about the exact versions of 
 # its dependencies, but let the downstream crate decide.
-/physics/Cargo.lock
+/**/Cargo.lock
 
 .DS_Store
