Adding in some initial sdl2 and fluid sim deps

--- a/crates/physics/Cargo.toml
+++ b/crates/physics/Cargo.toml
@@ -5,3 +5,9 @@ edition = "2021"
 
 [dependencies]
 libphysics = { version = "0.1.0", path = "../libphysics" }
+salva2d = "*"
+
+[dependencies.sdl2]
+version = "0.32.1"
+default-features = false
+features = ["gfx"]
