--- a/crates/physics/Cargo.toml
+++ b/crates/physics/Cargo.toml
@@ -18,7 +18,8 @@ version = "0.32.1"
 default-features = false
 features = ["gfx"]
 
+
 [dependencies.salva2d]
-version = "*"
+version = "0.7.0"
 default-features = false
 features = [ "rapier", "rapier-testbed", "sampling" ]
