--- a/crates/physics/Cargo.toml
+++ b/crates/physics/Cargo.toml
@@ -12,6 +12,8 @@ rapier2d = "0.11"
 rapier_testbed2d = "0.11"
 parry3d = { version = "0.7" }
 bevy = "0.5"
+core_simd = { git = "https://github.com/rust-lang/portable-simd" }
+rand="0.8.0"
 
 [dependencies.sdl2]
 version = "0.32.1"
