--- a/physics/Cargo.toml
+++ b/physics/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 libphysics = { version = "0.1.0", path = "../libphysics" }
+libphysicsrender = { version = "0.1.0", path = "../libphysicsrender" }
 Inflector  = "0.11"
 nalgebra   = "0.29"
 parry2d = "0.6"
