--- a/libphysicsrender/Cargo.toml
+++ b/libphysicsrender/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 libphysics = { version = "0.1.0", path = "../libphysics" }
 
 [dependencies.sdl2]
-version = "0.32.1"
+version = "0.35"
 default-features = false
-features = ["gfx"]
+features = ["gfx", "image"]
