--- a/physics/Cargo.toml
+++ b/physics/Cargo.toml
@@ -6,21 +6,20 @@ edition = "2021"
 [dependencies]
 libphysics = { version = "0.1.0", path = "../libphysics" }
 libphysicsrender = { version = "0.1.0", path = "../libphysicsrender" }
-Inflector  = "0.11"
-nalgebra   = "0.29"
-parry2d = "0.6"
-rapier2d = "0.11"
-rapier_testbed2d = "0.11"
-parry3d = { version = "0.7" }
-bevy = "0.5"
+#Inflector  = "0.11"
+#nalgebra   = "0.29"
+#parry2d = "0.6"
+#rapier2d = "0.11"
+#rapier_testbed2d = "0.11"
+#parry3d = { version = "0.7" }
+#bevy = "0.5"
 core_simd = { git = "https://github.com/rust-lang/portable-simd" }
-rand="0.8.0"
+rand = "0.8.0"
 
 [dependencies.sdl2]
-version = "0.32.1"
+version = "0.35"
 default-features = false
-features = ["gfx"]
-
+features = ["gfx", "image"]
 
 #[dependencies.salva2d]
 #version = "0.7.0"
